tercer commit primera pregunta finalizada :3

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,9 +4,9 @@
     </button>
     <span (click)="irHome()">App Cibertec</span>
     &nbsp;&nbsp;
-    <button mat-raised-button (click)="irEpisodies()">Libro</button>
+    <button mat-raised-button (click)="irEpisodies()">Episodies</button>
     &nbsp;&nbsp;
-    <button mat-raised-button (click)="irImagenes()">Tema</button>
+    <button mat-raised-button (click)="irImagenes()">Imagenes</button>
     &nbsp;&nbsp;
 
     <span class="example-spacer"></span>
