--- a/src/app/dashboard/episodies/episodies-lista/episodies-lista.component.html
+++ b/src/app/dashboard/episodies/episodies-lista/episodies-lista.component.html
@@ -1,1 +1,26 @@
-<p>episodies-lista works!</p>
+
+<table mat-table [dataSource]="episodes" class="mat-elevation-z8">
+    <!-- Definición de las columnas de la tabla -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="air_date">
+      <th mat-header-cell *matHeaderCellDef> Air Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.air_date}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="episode">
+      <th mat-header-cell *matHeaderCellDef> Episode </th>
+      <td mat-cell *matCellDef="let element"> {{element.episode}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="['id', 'name', 'air_date', 'episode']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['id', 'name', 'air_date', 'episode'];"></tr>
+  </table>
